CHATS_SIT/force-app/main/default/objects/Review_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00373</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Element</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Reason_Options__c</fullName>
        <label>N/A Reason Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00861</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Requirement</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Errors_and_Causes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Errors and Causes?</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>Does_the_Element_Apply_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the Element Apply to Case</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>Error_Options__c</fullName>
        <label>Error Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>CCCAP policy was not applied accurately for this element</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Verification in the provider file is not sufficient for this element</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>CHATS data entry is not accurate for this element</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Provider documentation is not sufficient for this element</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <label>LicenseType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Quality Exempt Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Review Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Element__c</columns>
        <columns>Question__c</columns>
        <columns>Review_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQ{0000}</displayFormat>
        <label>Review Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>