CHATS_SIT/force-app/main/default/objects/Review_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Element__c</columns>
    <columns>Question__c</columns>
    <columns>Review_Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>